--- a/14.0/Dockerfile
+++ b/14.0/Dockerfile
@@ -38,6 +38,9 @@ RUN apt-get update && \
     && apt-get install -y --no-install-recommends ./wkhtmltox.deb \
     && rm -rf /var/lib/apt/lists/* wkhtmltox.deb
 
+COPY requirments.txt /requirments.txt
+RUN pip install --install-option="--prefix=/install" -r /requirments.txt; rm -rf /requirments.txt
+
 # install latest postgresql-client
 RUN echo 'deb http://apt.postgresql.org/pub/repos/apt/ buster-pgdg main' > /etc/apt/sources.list.d/pgdg.list \
     && GNUPGHOME="$(mktemp -d)" \
